SVGs for math in RSS

--- a/emptysquare/themes/hugo_theme_emptysquare/layouts/partials/math_to_svg.html
+++ b/emptysquare/themes/hugo_theme_emptysquare/layouts/partials/math_to_svg.html
@@ -5,8 +5,8 @@
 {{ $annotation := index (findRE "<annotation[^>]*>(.*?)</annotation>" $expr) 0 }}
 {{ $latexContent := index (findRE ">(.*?)<" $annotation) 0 | strings.TrimPrefix ">" | strings.TrimSuffix "<" }}
 {{ $latexHash := sha256 $latexContent }}
-{{ $imgName := printf "formula-%s.png" $latexHash }}
-{{ $html = replace $html $expr (printf `<img src="%s">` $imgName) }}
+{{ $imgName := printf "formula-%s.svg" $latexHash }}
+{{ $html = replace $html $expr (printf `<img src="%s" style="vertical-align: middle">` $imgName) }}
 {{ end }}
 
 {{ return $html }}
