--- a/emptysquare/themes/hugo_theme_emptysquare/layouts/index.rss.xml
+++ b/emptysquare/themes/hugo_theme_emptysquare/layouts/index.rss.xml
@@ -27,11 +27,10 @@
       <pubDate>{{ .Date.Format "Mon, 02 Jan 2006 15:04:05 -0700" | safeHTML }}</pubDate>
       {{ with .Site.Params.author.email }}<author>{{.}}{{ with $.Site.Params.author.name }} ({{.}}){{end}}</author>{{end}}
       <guid>{{ .Permalink }}</guid>
-      {{ $processed := .Content }}
-      {{ $processed := partial "absolute_urls.html" (dict "Page" . "Content" $processed) }}
-      {{ $processed := partial "svg_to_png.html" (dict "Page" . "Content" $processed) }}
-      {{/* run math_to_svg after svg_to_png, we want formulas to be SVGs in RSS */}}
-      {{ $processed := partial "math_to_svg.html" (dict "Page" . "Content" $processed) }}
+      {{ $processed := .Content | safeHTML }}
+      {{ $processed = partial "absolute_urls.html" (dict "Page" . "Content" $processed) }}
+      {{ $processed = partial "math_to_picture.html" (dict "Page" . "Content" $processed) }}
+      {{ $processed = partial "svg_to_picture.html" (dict "Page" . "Content" $processed) }}
       <description>{{ $processed | html }}</description>
     </item>
     {{ end }}
