--- a/emptysquare/themes/hugo_theme_emptysquare/layouts/partials/absolute_urls.html
+++ b/emptysquare/themes/hugo_theme_emptysquare/layouts/partials/absolute_urls.html
@@ -1,4 +1,4 @@
-{{ $html := .Content | safeHTML }}
+{{ $html := .Content }}
 {{ $permalink := urls.Parse .Page.Permalink }}
 
 {{ $srcs := findRE " src=\"([^\"]*)\"" $html }}
