switch from mailchimp to kit

--- a/emptysquare/themes/hugo_theme_emptysquare/static/static/blog.css
+++ b/emptysquare/themes/hugo_theme_emptysquare/static/static/blog.css
@@ -592,6 +592,9 @@ article {
 .nav-next {
   float: right; }
 
+footer {
+  clear: both; }
+
 /* Inline MathML */
 .katex {
   font-size: 20px !important; }
