--- a/emptysquare/themes/hugo_theme_emptysquare/static/static/blog.css
+++ b/emptysquare/themes/hugo_theme_emptysquare/static/static/blog.css
@@ -106,6 +106,12 @@ figcaption > h4 {
   margin: 0.5em 0 1em;
 }
 
+.caption {
+  text-align: center;
+  font-style: italic;
+  margin-bottom: 1em;
+}
+
 h1, h2, h3, h4, h5 {
   clear: both;
   font-weight: bold;
